--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -2,6 +2,7 @@
    	================================================== */
 
 .footer {
+	grid-column: 1 / -1;
 	padding-top: 3rem;
 	padding-bottom: 3rem;
 	background-color: var(--clr-primary-100);
