--- a/scss/blocks/_navigation.scss
+++ b/scss/blocks/_navigation.scss
@@ -40,7 +40,7 @@
 	.cta {
 		display: none;
 
-		@include respond-to("medium") {
+		@include respond-to("large") {
 			display: inline-block;
 		}
 	}
