--- a/scss/utilities/_grid.scss
+++ b/scss/utilities/_grid.scss
@@ -8,7 +8,7 @@
 	}
 
 	@include respond-to("large") {
-		grid-template-columns: repeat(4, minmax(250px, 1fr));
+		grid-template-columns: repeat(4, minmax(200px, 1fr));
 	}
 
 	img {
